# agentic-remediation-factory

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: model-eval.yml  retrain.yml  sync-knowledge-base.yml
demo_repos/vulnerable-data-pipeline/: README.md  requirements.txt
demo_repos/vulnerable-data-pipeline/app/: api.py  cache.py  config.py  ingestor.py
demo_repos/vulnerable-data-pipeline/config/: settings.yaml
demo_repos/vulnerable-data-pipeline/tests/: test_cache.py  test_config.py  test_ingestor.py
orchestrator/: cli.py  driver.py  factory.py  knowledge_base.py  llm_client.py  org_scanner.py  remediator.py  report.py  telemetry.py
sandbox/: Dockerfile
scripts/: build_knowledge_base.py
tests/: test_build_detection.py  test_e2e_docker.py  test_e2e_python_docker.py  test_fix_antipatterns.py  test_java_source_patching_e2e.py  test_knowledge_base.py  test_llm_integration.py  test_local_provider.py  test_patching.py  test_python_source_patching_e2e.py  test_python_support.py  test_real_python_repo_e2e.py  test_real_repo_e2e.py  test_scanner.py  test_transitive_scanning.py
tests/fixtures/: gradle.lockfile  libs.versions.toml  vulnerable_build.gradle  vulnerable_build.gradle.kts  vulnerable_build_with_catalog.gradle  vulnerable_build_with_var.gradle  vulnerable_pom.xml  vulnerable_pyproject.toml  vulnerable_requirements.txt
training/: collect_github.py  collect_osv.py  evaluate.py  sentinel_logger.py  train.py  train_modal.py
training/data/: sentinel-kb.sqlite
